--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,32 @@
 serverless-xfm.cfn.yml
 awscli-bundle/
 
-# zip files
-*.zip
+# Eclipse
+.classpath
+.project
+.settings/
 
-.idea
+# Intellij
+.idea/
 *.iml
+*.iws
+
+# Maven
+log/
+target/
+
+# Mac
+.DS_Store
+.DS_Store?
+
+# Windows
+Desktop.ini
+*.lnk
+*.cab
+*.msi
+*.msm
+*.msp
+$RECYCLE.BIN/
+Thumbs.db
+ehthumbs.db
 
